--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@WuxiaScrolls" />
     <meta name="twitter:image" content="/og-image.png" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
 
   <body>
