--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@CalestialScrolls" />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="CalestialScrolls" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png">
   </head>
 
